2013-08-06 Alex Koutsman <alex.koutsman@cern.ch>
	M       src/CombineWorkSpaces.cxx
	* Solved re-introduced bug for collecting hypotests
	*	 for combination of workspaces, one must add "+combined" (where combined is the workspace name in file) to the format string
	*	 Example : format2 = 'filename+/afs/cern.ch/atlas/project/cern/susy/users/jlorenz/Sig_SM_SS1step_%f_%f_%f+combined'
	* Added more debug print statements

2013-08-05 Alex Koutsman <alex.koutsman@cern.ch>
	M       src/CombineWorkSpaces.cxx
	* Solved bug, where combination pdf category was out of sync with combination data
	* Added more print statements and fixed naming-problems
	
2013-07-25 Max Baak <mbaak@cern.ch>
	M       python/configManager.py
	M       python/sample.py
	M       python/systematic.py
	* Possibility to different nominal tree for systematics evaluation.
	* Use ala:
	jes       = Systematic("JES",    "_NoSys", "_JESup"    ,"_JESdown"    ,"tree","overallNormHistoSys") # JES uncertainty - for low pt jets
        jes.differentNominalTreeWeight = True 
	* Tagging HistFitter-00-00-30 


2012-12-05 Alex Koutsman <alex.koutsman@cern.ch>
	M 	Utils.cxx
	* Fixed the NLL plotting for Inf/NaN-error and wrong range setting.
	
2013-06-18 Max Baak <mbaak@cern.ch>
	M       src/ChannelStyle.cxx
	M       src/ChannelStyle.h
	M       configManager.py
	M       channel.py
	* Option to add text lines to plots.
	M	setup.sh
	M 	Utils.cxx (Alex Koutsman)
	* Fix of Roofit VisualizeError bug, see:
	* https://groups.cern.ch/group/hn-atlas-physics-Statistics/Lists/Archive/DispForm.aspx?ID=2070
	* Switch to head of root-5.34-patches branches for fix.
	* Tagging HistFitter-00-00-29

2013-06-12 Max Baak <mbaak@cern.ch>
	* Several minor updates
	M       ChannelStyle.cxx
	M       ValidationUtils.cxx
	M       ValidationUtils.h
        M       HistFitter.py
        M       prepareHistos.py
        M       configManager.py
	* Option to pickup histograms from a backup file. 