@@ -1,3 +1,10 @@
+2013-08-09 Alex Koutsman <alex.koutsman@cern.ch>
+	M       src/CombineWorkSpaces.cxx
+	M       src/Utils.cxx
+	* Fixed some bugs in CombineWorkspaces.cxx, so that combination data and pdf can now be fit to each other
+	*	Some minor naming issues remain, to be followed up.
+	* Added some catches in Util::resetError() function for combination workspaces
+
 2013-08-06 Alex Koutsman <alex.koutsman@cern.ch>
 	M       src/CombineWorkSpaces.cxx
 	* Solved re-introduced bug for collecting hypotests
